标准化 Response，重写 proto、openapi,统一 json 命名风格
