# api/openapi/order.yaml
@@ -9,16 +9,16 @@ servers:
       hostname:
         default: '127.0.0.1'
 paths:
-  /customer/{customerID}/orders/{orderID}:
+  /customer/{customer_id}/orders/{order_id}:
     get:
       description: "get orders"
       parameters:
-        - name: customerID
+        - name: customer_id
           in: path
           required: true
           schema:
             type: string
-        - name: orderID
+        - name: order_id
           in: path
           required: true
           schema:
@@ -36,13 +36,13 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error'
 
-  /customer/{customerID}/orders:
+  /customer/{customer_id}/orders:
     post:
       description: "create orders"
       parameters:
-        - name: customerID
+        - name: customer_id
           in: path
           required: true
           schema:
@@ -53,7 +53,7 @@ paths:
         content:
           application/json:
             schema:
-               $ref: '#/components/schemas/CreateOrderRequest'
+              $ref: '#/components/schemas/CreateOrderRequest'
 
       responses:
         "200":
@@ -75,14 +75,14 @@ components:
         type: object
         required:
           - id
-          - customerID
+          - customer_id
           - status
           - items
-          - paymentLink
+          - payment_link
         properties:
           id:
             type: string
-          customerID:
+          customer_id:
             type: string
           status:
             type: string
@@ -90,7 +90,7 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/Item'
-          paymentLink:
+          payment_link:
             type: string
 
     Item:
@@ -99,7 +99,7 @@ components:
         - id
         - name
         - quantity
-        - priceID
+        - price_id
       properties:
         id:
           type: string
@@ -108,16 +108,16 @@ components:
         quantity:
           type: integer
           format: int32
-        priceID:
+        price_id:
           type: string
 
     CreateOrderRequest:
       type: object
       required:
-        - customerID
+        - customer_id
         - items
       properties:
-        customerID:
+        customer_id:
           type: string
         items:
           type: array
